HelloUltraviolet/Fixtures/RejectedSource/Statements/AssignmentStatementsDiagnostic/Expected.uv
//! Expected diagnostic metadata for the AssignmentStatementsDiagnostic rejected-source specimen.

expectedDiagnostic("E-SEM-3131", "diag.18.AssignmentStatements")
